--- a/ecoles/ecole/templates/index.html
+++ b/ecoles/ecole/templates/index.html
@@ -48,8 +48,9 @@
         </div>
       </nav>
       <div class="container">
-        <div class="display-4">Informations sur les etudiants</div>
+        <div class="display-4 text-center">Informations sur les etudiants</div>
       </div>
+      <p>Consultez la liste des étudiants</p>
       <table class="table table-hover">
         <thead>
           <tr>
